process raw data

--- a/Raw_Data_Process.ipynb
+++ b/Raw_Data_Process.ipynb
@@ -468,6 +468,43 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 355873 entries, 0 to 355872\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column         Non-Null Count   Dtype  \n",
+      "---  ------         --------------   -----  \n",
+      " 0   Make           355873 non-null  object \n",
+      " 1   Model          355873 non-null  object \n",
+      " 2   Years          355873 non-null  int64  \n",
+      " 3   Price          355873 non-null  int64  \n",
+      " 4   Trade_In       355873 non-null  int64  \n",
+      " 5   Financed       355873 non-null  int64  \n",
+      " 6   Age            355873 non-null  int64  \n",
+      " 7   Income         355873 non-null  float64\n",
+      " 8   Gender         355873 non-null  object \n",
+      " 9   Returned       355873 non-null  int64  \n",
+      " 10  Distance       355873 non-null  int64  \n",
+      " 11  Rate           355873 non-null  int64  \n",
+      " 12  Warranty       355873 non-null  int64  \n",
+      " 13  Multiple_Buys  355873 non-null  int64  \n",
+      "dtypes: float64(1), int64(10), object(3)\n",
+      "memory usage: 38.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -522,11 +559,11 @@
        "      <td>21.740776</td>\n",
        "      <td>0.466172</td>\n",
        "      <td>0.779343</td>\n",
-       "      <td>46.471101</td>\n",
+       "      <td>46.469443</td>\n",
        "      <td>63.041366</td>\n",
        "      <td>0.204767</td>\n",
-       "      <td>15.507389</td>\n",
-       "      <td>9.324925</td>\n",
+       "      <td>15.513846</td>\n",
+       "      <td>9.319622</td>\n",
        "      <td>0.252101</td>\n",
        "      <td>0.533418</td>\n",
        "    </tr>\n",
@@ -536,11 +573,11 @@
        "      <td>7.426396</td>\n",
        "      <td>0.498855</td>\n",
        "      <td>0.414690</td>\n",
-       "      <td>14.394110</td>\n",
+       "      <td>14.392152</td>\n",
        "      <td>49.080791</td>\n",
        "      <td>0.403532</td>\n",
-       "      <td>65.681758</td>\n",
-       "      <td>1.458715</td>\n",
+       "      <td>65.670528</td>\n",
+       "      <td>1.472063</td>\n",
        "      <td>0.434220</td>\n",
        "      <td>1.190329</td>\n",
        "    </tr>\n",
@@ -631,8 +668,8 @@
        "\n",
        "                 Age         Income       Returned       Distance  \\\n",
        "count  355873.000000  355873.000000  355873.000000  355873.000000   \n",
-       "mean       46.471101      63.041366       0.204767      15.507389   \n",
-       "std        14.394110      49.080791       0.403532      65.681758   \n",
+       "mean       46.469443      63.041366       0.204767      15.513846   \n",
+       "std        14.392152      49.080791       0.403532      65.670528   \n",
        "min        20.000000       0.000000       0.000000       0.000000   \n",
        "25%        30.000000      40.000000       0.000000       5.000000   \n",
        "50%        40.000000      60.000000       0.000000       8.000000   \n",
@@ -641,8 +678,8 @@
        "\n",
        "                Rate       Warranty  Multiple_Buys  \n",
        "count  355873.000000  355873.000000  355873.000000  \n",
-       "mean        9.324925       0.252101       0.533418  \n",
-       "std         1.458715       0.434220       1.190329  \n",
+       "mean        9.319622       0.252101       0.533418  \n",
+       "std         1.472063       0.434220       1.190329  \n",
        "min         0.000000       0.000000       0.000000  \n",
        "25%         9.000000       0.000000       0.000000  \n",
        "50%        10.000000       0.000000       0.000000  \n",
@@ -650,7 +687,7 @@
        "max        10.000000       1.000000      10.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +769,7 @@
        "      <td>F</td>\n",
        "      <td>1</td>\n",
        "      <td>19</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -749,7 +786,7 @@
        "      <td>F</td>\n",
        "      <td>1</td>\n",
        "      <td>21</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -834,7 +871,7 @@
        "      <td>U</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -910,13 +947,13 @@
        "\n",
        "        Returned  Distance  Rate  Warranty  Multiple_Buys  \n",
        "0              0         8    10         0              1  \n",
-       "1              1        19    10         0              0  \n",
-       "2              1        21     9         0              0  \n",
+       "1              1        19     9         0              0  \n",
+       "2              1        21    10         0              0  \n",
        "3              0         8    10         0              0  \n",
        "4              1         5    10         1              1  \n",
        "...          ...       ...   ...       ...            ...  \n",
        "355868         0        13    10         0              0  \n",
-       "355869         0         2    10         0              0  \n",
+       "355869         0         2     8         0              0  \n",
        "355870         1         9    10         0              1  \n",
        "355871         0         5    10         0              0  \n",
        "355872         0         9    10         0              0  \n",
@@ -924,7 +961,7 @@
        "[355873 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1052,7 @@
        "      <td>F</td>\n",
        "      <td>1</td>\n",
        "      <td>19</td>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1032,7 +1069,7 @@
        "      <td>F</td>\n",
        "      <td>1</td>\n",
        "      <td>21</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1117,7 +1154,7 @@
        "      <td>U</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1193,13 +1230,13 @@
        "\n",
        "        Returned  Distance  Rate  Warranty  Multiple_Buys  \n",
        "0              0         8    10         0              1  \n",
-       "1              1        19    10         0              0  \n",
-       "2              1        21     9         0              0  \n",
+       "1              1        19     9         0              0  \n",
+       "2              1        21    10         0              0  \n",
        "3              0         8    10         0              0  \n",
        "4              1         5    10         1              1  \n",
        "...          ...       ...   ...       ...            ...  \n",
        "355868         0        13    10         0              0  \n",
-       "355869         0         2    10         0              0  \n",
+       "355869         0         2     8         0              0  \n",
        "355870         1         9    10         0              1  \n",
        "355871         0         5    10         0              0  \n",
        "355872         0         9    10         0              0  \n",
@@ -1207,7 +1244,7 @@
        "[355873 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
