statistics from data

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -618,11 +618,11 @@
       "MALIBU          2.0\n",
       "COROLLA         1.8\n",
       "               ... \n",
-      "ASPEN HYBRID    0.0\n",
-      "G30             0.0\n",
-      "X6 HYBRID       0.0\n",
-      "QX60            0.0\n",
-      "LW200           0.0\n",
+      "EUROVAN         0.0\n",
+      "SUPRA           0.0\n",
+      "JETTA HYBRID    0.0\n",
+      "G500            0.0\n",
+      "LW300           0.0\n",
       "Name: Model, Length: 639, dtype: float64\n"
      ]
     }
@@ -1158,6 +1158,7 @@
     }
    ],
    "source": [
+    "# 6 BEST-SELLING BUYERS\n",
     "dt = df.groupby(by=[df['Age'], df['Income']]).agg('count').Make\n",
     "round(dt.sort_values(ascending=False) / len(df) * 1000, 0).head(6)"
    ]
@@ -1186,6 +1187,7 @@
     }
    ],
    "source": [
+    "# 6 MOST-FINANCING BUYERS\n",
     "dt = df[df['Financed']==1].groupby(by=[df['Age'], df['Income']]).agg('count').Make\n",
     "round(dt.sort_values(ascending=False) / len(df) * 1000, 0).head(6)"
    ]
@@ -1201,8 +1203,6 @@
        "35    244.0\n",
        "45    244.0\n",
        "25    231.0\n",
-       "55    157.0\n",
-       "65     73.0\n",
        "Name: Age, dtype: float64"
       ]
      },
@@ -1212,7 +1212,8 @@
     }
    ],
    "source": [
-    "round(df[df['Multiple_Buys'] > 0].Age.value_counts(normalize=True) * 1000, 0).head()"
+    "# 3 BEST-SUBSEQUENT BUYERS\n",
+    "round(df[df['Multiple_Buys'] > 0].Age.value_counts(normalize=True) * 1000, 0).head(3)"
    ]
   },
   {
@@ -1221,6 +1222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Distance \n",
     "def dist_count(df, fro, to):\n",
     "    dt = df[(df.Distance >= fro) & (df.Distance <= to)]\n",
     "    print(dt.Distance.value_counts().sort_index().head(15))"
@@ -1255,6 +1257,7 @@
     }
    ],
    "source": [
+    "# LOCAL DOMINANCE 1-15 MILES\n",
     "dist_count(df, 1, 15)"
    ]
   },
@@ -1287,6 +1290,7 @@
     }
    ],
    "source": [
+    "# LOCAL DOMINANCE 16-30 MILES\n",
     "dist_count(df, 16, 30)"
    ]
   },
@@ -1319,6 +1323,7 @@
     }
    ],
    "source": [
+    "# LOCAL DOMINANCE 31-45 MILES\n",
     "dist_count(df, 31, 45)"
    ]
   },
