statistics from data

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1500,6 +1500,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6 BEST-SELLING BUYERS\n",
+    "> One of crucial tasks for marketing strategy is to identify the top buyers among **10** groups of ages and **11** groups of incomes among the buyers so they can be treated with a special care.  \n",
+    "> The data shows that **25**, **35**, and **45**-year-old groups with incomes of **30K** and **50K** encompass the top **6** classes of buyers.   \n",
+    "> Specifically, for income of **30K**, there are **96** buyers in **25**-year-old group, **60** in **35**-year-old group, and **46** in **45**-year-old group for every part of **1,000** buyers. And for income of **50K**, there are **65** buyers in **25**-year-old group, **69** in **35**-year-old group, and **58** in **45**-year-old group for every part of **1,000** buyers. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1526,6 +1536,15 @@
     "# 6 BEST-SELLING BUYERS\n",
     "dt = df.groupby(by=[df['Age'], df['Income']]).agg('count').Make\n",
     "round(dt.sort_values(ascending=False) / len(df) * 1000, 0).head(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6 MOST-FINANCING BUYERS\n",
+    "> As a result of purchase power, **25**, **35**, and **45**-year-old groups with incomes of **30K** and **50K** are again on the top **6** classes of buyers in terms of car financing.   \n",
+    "> For income of **30K**, there are **83** buyers in **25**-year-old group, **50** in **35**-year-old group, and **35** in **45**-year-old group for every part of **1,000** buyers. And for income of **50K**, there are **55** buyers in **25**-year-old group, and **58** in **35**-year-old group, and **46** in **45**-year-old group for every part of **1,000** buyers. "
    ]
   },
   {
@@ -1558,6 +1577,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3 BEST-SUBSEQUENT BUYERS\n",
+    "> Age groups of **45**, **35**, and **25** rank top 3 in the subsequent sales following the 2013 purchases. The account for **72%** of returned buyers.   \n",
+    "> The data indicates that for every **1,000** subsequent sales following 2013 purchases, there are **241**, **244**, **244** purchases from **25**, **35**, and **45** year olds, respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1579,6 +1607,14 @@
    "source": [
     "# 3 BEST-SUBSEQUENT BUYERS\n",
     "round(df[df['Multiple_Buys'] > 0].Age.value_counts(normalize=True) * 1000, 0).head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TREND OF BUYER'S SATISFACTION RATE\n",
+    "> Further, buyer's satisfaction rate plays a key role in number of subsequent purchases. The graph shows that there are exponential growths in the number subsequent sales following the 2013 purchases when the buyer's satisfaction scores 8 or higher. "
    ]
   },
   {
@@ -1765,6 +1801,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### LOCAL DOMINANCE\n",
+    "> The dataset reveals that more that **3** out of **4** buyers within **15**-mile radius from the dealers and **9** out of **10** within **30**-mile radius.     \n",
+    "> The **4** largest numbers of purchases come from buyers who live in **4**, **5**, **6**, and **7** miles for the car dealers.\n",
+    "> Beyond 46-mile radius, the number of purchases becomes insignificant (less than **5%**)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1903,6 +1949,17 @@
    "source": [
     "# LOCAL DOMINANCE 31-45 MILES\n",
     "dist_count(df, 31, 45)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### BUYER'S FINANCING OPTIONS\n",
+    "> Conventional wisdom tells us that people tend to loan more money for higher price-tag cars, but it's not the case found in this dataset.   \n",
+    "> The chart shows the ratio of buyers who exercise car financing options over those who don't peaks at unit price range of **12.5K** dollars and gradually climbs down as the price tag increases.    \n",
+    "> Significantly, while more people choose car loans for each less than **82K** dollars, less than **1/3** number of buyers choose car loan with value more than **90K** dollars."
    ]
   },
   {
@@ -2091,9 +2148,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### BUYER'S UNIT PRICE CHOICE\n",
+    "> Across the income domain, buyers in each income group prefer cars with price range from **12.5K** to **22.5K** dollars more than any other ranges.      \n",
+    "> While the average percentage of buyers who purchase cars in each of **18** different price ranges is less than **6%**, there are more than **12%** buyers in each of **12.5K**, **17.5K**, and **22.5K** dollars ranges."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
